# cpp-hw

./: .gitignore
AllocationSimulator/: CMakeLists.txt
AllocationSimulator/src/: AllocationSimulator.cpp  AllocationSimulator.h  CMakeLists.txt  Process.cpp  Process.h  Resource.cpp  Resource.h
AllocationSimulator/test/: AllocationSimulatorTests.cpp  CMakeLists.txt
QSortMultithreaded/: CMakeLists.txt  demo.cpp
QSortMultithreaded/src/: CMakeLists.txt  quicksort_multi.h  quicksort_single.h
QSortMultithreaded/test/: CMakeLists.txt  SpeedTest.cpp
